--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/background.jpg); height: 100vh;" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover center-items" role="banner" style="background-image:url(images/background.jpg); height: 100vh;" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
