remove fixed margin

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<!-- <h1 class="main-names">Τα δίδυμα</h1> -->
 
-								<h2 class="main-names" style="margin-top: 200px">Θα χαρούμε πολύ να σας δούμε στη βάπτιση μας!</h2>
+								<h2 class="main-names">Θα χαρούμε πολύ να σας δούμε στη βάπτιση μας!</h2>
 							
 							<!-- <div class="container"> -->
 								<div class="row" style="margin-top: 20px;">
