--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
 						<!-- <li><a href="#page">Home</a></li> -->
 						<li><a href="#fh5co-couple">ΠΡΟΣΚΛΗΣΗ</a></li>
 						<li><a href="#fh5co-event">ΤΟΠΟΘΕΣΙΑ</a></li>
-						<li><a href="#fh5co-services">ΛΙΣΤΑ ΒΑΠΤΙΣΗΣ</a></li>
 						<li><a href="#fh5co-started">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
 						
 					</ul>
@@ -104,12 +103,16 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<!-- <h1 class="main-names">Τα δίδυμα</h1> -->
 
-								<h2 class="main-names">Θα χαρούμε πολύ να σας δούμε στη βάπτιση μας!</h2>
+							<div class="row child-names animate-box">
+								Νίκος & Οδυσσέας
+							</div>
+
+							<h2 class="main-names">Θα χαρούμε πολύ να σας δούμε στη βάπτιση μας!</h2>
 							
 							<!-- <div class="container"> -->
-								<div class="row main-dates">
+								<div class="row main-dates vertical-center">
 									<div class="col-md-4 col-sm-3 col-xs-2"></div>
-									<div class="col-md-2 col-sm-3 col-xs-4" style="border-right: 5px solid #1d425d">
+									<div class="col-md-2 col-sm-3 col-xs-4 date-col" style="border-right: 5px solid #1d425d">
 										<span class='strong-dt'>9</span>
 										<span class='light-dt'>Μαΐου</span>
 										<br/>
@@ -117,9 +120,9 @@
 									</div>
 									<div class="col-md-2 col-sm-3 col-xs-4">
 										<!-- <span class='light-dt'>Ώρα</span> -->
-										<span class='strong-dt'>4:30</span>
-										<br/>
-										<span class='strong-dt'>μ.μ.</span>
+										<span class='strong-dt'>16:30</span>
+										<!-- <br/>
+										<span class='strong-dt'>μ.μ.</span> -->
 									</div>
 								</div>
 							<!-- </div> -->
@@ -146,7 +149,7 @@
 										&emsp; 
 										Ελένη Κουρκουλιώτου
 									</p>
-									<p>Ελευθερία Κοπέλη</p>
+									<p>Ελευθερία Κοπέλλη</p>
 								</div>
 							</div>
 
@@ -239,7 +242,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-services" class="fh5co-section-gray">
+	<!-- <div id="fh5co-services" class="fh5co-section-gray">
 		<div class="container">
 			
 			<div class="row animate-box">
@@ -251,7 +254,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/beige-background.jpg);">
