--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/custom.css">
+	<link rel="stylesheet" href="css/custom-media.css">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
