--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								Νίκος & Οδυσσέας
 							</div>
 
-							<h2 class="main-names">Θα χαρούμε πολύ να σας δούμε στη βάπτιση μας!</h2>
+							<h2 class="main-names">Θα χαρούμε πολύ να σας δούμε στη βάπτισή μας!</h2>
 							
 							<!-- <div class="container"> -->
 								<div class="row main-dates vertical-center">
